# aletheia-probe

./: .gitignore  AGENTS.md  AICodingAgent.md  BETA-TESTING.md  CITATION.cff  ENHANCEMENT_SUMMARY.md  FALLBACK_CHAIN_IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  test-bot-attribution.md
.claude/: CLAUDE.md  README.md  settings.json
.gemini/: settings.json
.github/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  comprehensive-benchmarks.yml  dead-code-detection.yml  joss-paper.yml  release.yml  security.yml
dev-notes/: AI_ASSISTED_DEVELOPMENT.md  ARCHITECTURE_OVERVIEW.md  BACKEND_ARCHITECTURE.md  CODING_STANDARDS.md  DEPENDENCIES.md  LOGGING_USAGE.md  NORMALIZED_DATABASE_DESIGN.md  REVIEW-PROMPT.md
dev-notes/integration/: README.md  algerian-ministry.md  core.md  openalex.md  opencitations.md  pubmed.md  retraction-watch.md
docs/: CHANGELOG.md  RELEASE.md  automatic-fallback-chain-design.md  configuration.md  feedback.md  local-doaj-backend.md  local-openalex-backend.md  local-opencitations-backend.md  massive-evaluation-plan.md  media-mentions.md  opencitations-adapter-requirements.md  quick-start.md  research-applications.md  troubleshooting.md  user-guide.md
docs/JOSS/: README.md  WITHDRAWAL.md  build.sh  paper.bib  paper.md
docs/api-reference/: backends.md  extending-guide.md  models.md  python-api.md
docs/arxiv-tool-description/: .gitignore  AletheiaProbe-short.bib  AletheiaProbe-short.tex  LICENSE  SelfArx.cls  build.sh  create_arxiv_tar.sh
docs/future-integrations/: README.md  nlm-catalog.md  openapc.md  openreview.md  ror.md  wikidata.md
examples/: README.md  basic_assessment.py  bibtex_processing.py
scripts/: README.md  bump_version.py  check-examples.py  check-logging.py  check-markdown-links.py  check-spdx.py  cloc.sh  condense_mass_eval_jsonl.py  detect-dead-code.py  find_middle_imports.py  post-pr-merge.sh  run-comprehensive-benchmarks.sh  run-quality-checks.sh  test_core_requests.py  validate_setup.sh  with-venv.sh
src/aletheia_probe/: __init__.py  abbreviation_learner.py  acronym_exporter.py  article_retraction_checker.py  backend_exceptions.py  batch_acronym_processor.py  batch_assessor.py  bibtex_parser.py  cache.py  cache_sync.py  cli.py  confidence_utils.py  config.py  constants.py  data_models.py  dispatcher.py  enums.py  fallback_chain.py  fallback_executor.py  logging_config.py  lookup.py  models.py  normalizer.py  openalex.py  opencitations.py  output_formatter.py  publication_assessment_workflow.py  quality_assessment.py  retry_utils.py  risk_calculator.py  ror_snapshot_importer.py  validation.py
src/aletheia_probe/backends/: __init__.py  algerian_ministry.py  base.py  bealls.py  doaj.py  (+24 more)
tests/: conftest.py
tests/fixtures/: test_conferences.bib
tests/integration/: README.md  __init__.py  test_assessment_integration.py  test_basic_integration.py  test_bibtex_integration.py  test_cache_integration.py  test_db_writer_integration.py  test_email_configuration.py
tests/performance/: __init__.py  conftest.py  test_batch_processing_performance.py
tests/unit/: test_acronym_exporter.py  test_acronym_normalization.py  test_article_retraction_checker.py  test_backend_email_configuration.py  test_backend_exceptions.py  test_batch_acronym_processor.py  test_batch_assessor.py  test_bibtex_parser.py  test_cache.py  test_cache_acronym.py  test_cache_assessment.py  test_cache_base.py  test_cache_data_source.py  test_cache_journals.py  test_cache_key_value.py  test_cache_openalex.py  test_cache_retraction.py  test_cache_ror.py  test_cache_schema.py  test_cache_sync.py  test_cli.py  test_confidence_utils.py  test_config.py  test_cross_validation.py  test_db_writer.py  test_dispatcher.py  test_email_configuration_issue47.py  test_fallback_chain.py  test_fallback_executor.py  test_issue47_actual_fix.py  test_kscien_hijacked_journals.py  test_kscien_publishers_backend.py  test_kscien_refactor.py  test_kscien_standalone_journals.py  test_logging_config.py  test_lookup.py  test_mass_eval.py  test_models.py  test_normalizer.py  test_openalex.py  (+9 more)
tmp/: 2511.14963.tar_main.bib  2511.14963.tar_main.json
(+104 files in other folders)
